Make paths platform-independent

--- a/02-linalg-linear-model/exercises/02_logistic_regression.ipynb
+++ b/02-linalg-linear-model/exercises/02_logistic_regression.ipynb
@@ -94,6 +94,7 @@
    },
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -122,7 +123,7 @@
     "    columns = ['ID', 'diagnosis']\n",
     "    columns.extend(image_features())\n",
     "\n",
-    "    data = pd.read_csv(local_file, index_col=0, header=None,\n",
+    "    data = pd.read_csv(Path(local_file), index_col=0, header=None,\n",
     "                       names=columns, dtype={'diagnosis': 'category'})\n",
     "    y = data.diagnosis.cat.rename_categories(['benign', 'malignant'])\n",
     "    X = data.drop('diagnosis', axis=1).astype(float)\n",
@@ -136,7 +137,7 @@
     "    columns.extend(image_features())\n",
     "    columns.extend(extra_vars)\n",
     "\n",
-    "    data = pd.read_csv(local_file, index_col=0, header=None,\n",
+    "    data = pd.read_csv(Path(local_file), index_col=0, header=None,\n",
     "                       names=columns, dtype={'outcome': 'category'},\n",
     "                       na_values=['?'])\n",
     "    y = data.loc[:, outcomes]\n",
