--- a/02-linalg-linear-model/solutions/01_linear_regression.ipynb
+++ b/02-linalg-linear-model/solutions/01_linear_regression.ipynb
@@ -22,6 +22,7 @@
    },
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -185,7 +186,7 @@
     }
    ],
    "source": [
-    "bodyfat = pd.read_csv('../datasets/bodyfat.csv')\n",
+    "bodyfat = pd.read_csv(Path('../datasets/bodyfat.csv'))\n",
     "\n",
     "bodyfat['body.fat'].hist()\n",
     "bodyfat.head()"
